# max-roku

./: .gitignore  Pipfile  README.md  pyproject.toml  pytest.ini
catalog/netflix/: Home - Netflix.html  series.yaml  videos.yaml
catalog/zinniatv/: series.yaml  videos.yaml
src/: .coverage
src/max_roku/: README.md  catalog.py  command_handler.py  constants.py  discover.py  exceptions.py  main.py  provider.py  roku_controller.py
src/tests/unit/: conftest.py  test_controller.py  test_main.py  test_providers.py
tests/: conftest.py
tests/integration/: app_configs.py  conftest.py  test_launch_restart.py  test_netflix.py
tests/manual/: conftest.py  test_netflix.py
tests/unit/: conftest.py  test_controller.py  test_discover.py  test_main.py  test_providers.py
